tests/ui/impl-trait/issues/issue-84919.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
  --> $DIR/issue-84919.rs:5:13
   |
LL |     let _x: impl Trait = ();
   |             ^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods
   = note: see issue #63065 <https://github.com/rust-lang/rust/issues/63065> for more information
   = help: add `#![feature(impl_trait_in_bindings)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
